--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
   
      
   <div class="container home">
-   
+    <nav>
+      <h1></h1>
+      <a href="#">Home</a>
+      <a href="#">About Us</a>
+      <a href="#">Blog</a>
+      <a href="#">Contact</a>
+    </nav>
     <section class="content-section">
       <div class="text-content">
         <h2>Let's Go!</h2>
