Added Animation to Button and a Form

--- a/index.html
+++ b/index.html
@@ -76,6 +76,38 @@
         <div class="btn">Sign Me Up!</div>
       </div>
     </section>
+    <section class="content-destination">
+      <h4>Book Your Vacation</h4>
+      <form action="" method="GET" class="vacation-form">
+        <div class="form-row">
+              <label for="vacation">Vacation</label>
+              <select id="vacation" name="vacation">
+                <option value="Bermuda">Bermuda</option>
+                <option value="Miami">Miami</option>
+                <option value="Hawaii">Hawaii</option>
+                <option value="Other">Other</option>
+              </select>
+        </div>
+        <div class="form-row">
+            <label for="full-name">Name</label>
+            <input id="full-name" name="full-name" type="text" placeholder="Joe Friendly">
+        </div>
+        <div class="form-row">
+            <label for="email">Email</label>
+            <input id="email" name="email" type="email" placeholder="joe@gmail.com">
+        </div>
+        <div class="form-row">
+            <label for="phone">Phone Number</label>
+            <input id="phone" name="phone" type="phone" placeholder="123-456-7891">
+        </div>
+        <div class="form-row">
+            <label for="instructions">Special Instructions</label>
+            <textarea name="special intructions" id="instructions" cols="30" rows="5" placeholder="Any Special Instructions?"></textarea>
+            <div class="instructions">Any Special Instructions</div>
+        </div>
+      </form>
+      <div class="btn">Submit!</div>
+    </section>
   </div><!-- container -->
 
   <footer class="footer">
